styles/layout.scss
/* NAVIGATION BAR */
nav {
  padding: 0 2em;
  background: rgba(200,54,54,0.68);
  // background-color: red;
  // opacity: 0.68;
  font-size: 1.2em;
}

nav a, a.brand-logo {
  line-height: 54px;
  height: 54px;
  padding: 5px 0;
}

.brand-logo {
  left: 0;
  -webkit-transform:translateX(0);transform:translateX(0);
}

img.nav-logo {
  height: 50px;
  width: auto;
}

.nav-menu_btn, .nav-menu_btn:focus {
  border: 0;
  background-color: transparent;
  height: 64px;
  text-shadow: 0;
  transition: ease all 0.3s;
}

button.nav-menu_btn:hover {
  background: rgba(0,0,0,0.25);
}

/* MAIN CONTENT */
body.home {
  background: url("./images/warrior.jpeg") no-repeat center center fixed;
}

body {

  font-family: 'Cinzel', serif;
  color: white;
  text-align: center;
}

h1 {
  font-family: 'Cinzel', serif;
  font-weight: bold;
}

body.mainB {
  background: #555 url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAFCAYAAACNbyblAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAB9JREFUeNpi/P//PwM6YGLAAuCCmpqacC2MRGsHCDAA+fIHfeQbO8kAAAAASUVORK5CYII=);
}

a {
  color: #ccc;
}

/*-------------------------------------*/
.cf:before, .cf:after {
  content: "";
  display: table;
}

.cf:after {
  clear: both;
}

.cf {
  zoom: 1;
}

/*-------------------------------------*/
.form-wrapper {
  width: 450px;
  padding: 15px;
  margin: 150px auto 50px;
  margin-bottom: 5px;
  background: #444;
  background: rgba(0, 0, 0, 0.2);
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  border-radius: 10px;
  -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4) inset, 0 1px 0 rgba(255, 255, 255, 0.2);
  -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4) inset, 0 1px 0 rgba(255, 255, 255, 0.2);
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.4) inset, 0 1px 0 rgba(255, 255, 255, 0.2);
}

.form-wrapper input {
  padding: 10px 5px;
  float: left;
  font-size: bold 15px;
  font-family: 'Cinzel', serif;
  border: 0;
  background: #eee;
  -moz-border-radius: 3px 0 0 3px;
  -webkit-border-radius: 3px 0 0 3px;
  border-radius: 3px;
}

.form-wrapper input:focus {
  outline: 0;
  background: #fff;
  -moz-box-shadow: 0 0 2px rgba(0, 0, 0, 0.8) inset;
  -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.8) inset;
  box-shadow: 0 0 2px rgba(0, 0, 0, 0.8) inset;
}

.form-wrapper input::-webkit-input-placeholder {
  color: #999;
  font-weight: normal;
  font-style: italic;
}

.form-wrapper input:-moz-placeholder {
  color: #999;
  font-weight: normal;
  font-style: italic;
}

.form-wrapper input:-ms-input-placeholder {
  color: #999;
  font-weight: normal;
  font-style: italic;
}

.form-wrapper button {
  overflow: visible;
  position: relative;
  float: center;
  border: 0;
  padding: 0;
  margin: 4px;
  margin-top: 20px;
  cursor: pointer;
  height: 40px;
  width: 110px;
  font-size:20px;
  font-family: 'Cinzel', serif;
  color: #fff;
  text-transform: uppercase;
  background: #d83c3c;
  border-radius: 3px;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
}

.form-wrapper button:hover {
  background: #e54040;
}

.form-wrapper button:active,
.form-wrapper button:focus {
  background: #c42f2f;
}

.form-wrapper button:before {
  content: '';
  position: absolute;
  border-width: 8px 8px 8px 0;
  border-style: none solid solid solid;
  border-color: transparent #d83c3c transparent;
}

.form-wrapper button:hover:before {
  border-right-color: #e54040;
}

.form-wrapper button:focus:before {
  border-right-color: #c42f2f;
}

.form-wrapper button::-moz-focus-inner {
  border: 0;
  padding: 0;
}

.byline p {
  text-align: center;
  color: #c6c6c6;
  font-size: bold 18px ;
  font-family: 'Cinzel', serif;
  text-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
}

.byline p a {
  color: #d83c3c;
  text-decoration: none;
}

#prod {
  width: 330px;
  height: 30px;
  margin-left: 40px;
}

#b1 {
  width: 163px;
  height: 30px;
  margin-top: 2px;
  margin-left: 40px;
}

#b2 {
  width: 163px;
  height: 30px;
  margin-top: 2px;
  margin-left: 3px;
}

.search {
  text-align: center;
}

#emailReg {
  width: 163px;
  height: 60px;
  border: 1px solid grey;
  background-color: white;
  margin-right: 20px;
  border-radius: 5px;
  padding: 1em;
  color: #555;
  margin-top: 150px;
}

::-webkit-input-placeholder {
  font-family: 'Cinzel', serif;

  /* WebKit, Blink, Edge */
  color: #555;
}

#passReg {
  width: 163px;
  height: 60px;
  border: 1px solid grey;
  background-color: white;
  display: inline-block;
  margin-left: 20px;
  border-radius: 5px;
  padding: 1em;
  color: #555;
}

.log-words{
  color:white;
  font:45px;
  text-align: center;

}
label{
    color:white;
    font-size: 15pt;
 }

.form-login{
  margin-top: 200px;
  padding: 2em;
  height:530px;
  background: rgba(200, 54, 54, 0.3);
  color:solid white;
}

#passLogin {
  width: 163px;
  height: 20px;
  border: 1px solid grey;
  background-color: white;
  margin-left: 20px;
  border-radius: 5px;
  padding: 1em;

  color: #555;
}
#emailLogin {
  width: 163px;
  height: 20px;
  border: 1px solid grey;
  background-color: white;
  margin-left: 20px;
  margin-right:60px;
  border-radius: 5px;
  padding: 1em;
  color: #555;
}

::-webkit-input-placeholder {
  /* WebKit, Blink, Edge */
  color: #555;
}

.text-box-form{
  margin-top:120px;
  margin-right: 50px;


}

#logNow {
  overflow: visible;
  position: relative;
  float: center;
  border: 0;
  padding: 0;
  margin-top: 60px;
  cursor: pointer;
  height: 40px;
  width: 110px;
  font-size:20px;
  font-family: 'Cinzel', serif;
  color: #fff;
  text-transform: uppercase;
  background: #d83c3c;
  border-radius: 3px;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
}

#logNow:hover {
  background: #e54040;
}

#loginBtn {
  width: 90px;
  height: 30px;
  background-color: red;
  border-radius: 8px;
  border: 0;
  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.3);
  margin-top: 30px;
}

